clean up title names

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/loading.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <section class="loading">
@@ -170,7 +175,7 @@
         <p>I’m a Latinx multidisciplinary designer living and working out of Baltimore, MD. My current obsession has been learning to build with code. I'm originally from Southern California and moved to Baltimore to attend MICA, where I graduated in 2015. I currently work at Kapowza as an Interactive Designer.
 </p>
 <p class="hobbies">
-When I’m not working, I stay busy by reading <a href="#" class="revealImage" data-src="../assets/about/calabi-yau.png">physics articles,</a> <a href="#" class="revealImage" data-src="../assets/about/wanda_sander.jpg">powerlifting,</a> and <a href="#" class="revealImage" data-src="../assets/about/tamales.jpg">cooking Ecuadorian food</a>. My ideal weekend is eating a huge bowl of Pho and watching <a href="#" class="revealImage" data-src="https://media.giphy.com/media/eggkOyfpyWweI/giphy.gif">Curb Your Enthusiasm.</a>
+When I’m not working, I stay busy by reading <a href="#" class="revealImage" data-src="assets/about/calabi-yau.png">physics articles,</a> <a href="#" class="revealImage" data-src="assets/about/wanda_sander.jpg">powerlifting,</a> and <a href="#" class="revealImage" data-src="assets/about/tamales.jpg">cooking Ecuadorian food</a>. My ideal weekend is eating a huge bowl of Pho and watching <a href="#" class="revealImage" data-src="https://media.giphy.com/media/eggkOyfpyWweI/giphy.gif">Curb Your Enthusiasm.</a>
         </p>
         <h6>This site was designed & coded from scratch. No templates - just learning.</h6>
       </div>
