header item update + content updates

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <section class="portfolio-container box_1">
             <div class="portfolio-title">
-              <div class="item home"><em>//</em></div>
+              <div class="item home"><em>·</em></div>
               <div class="number">1/8</div>
               </div>
             </div>
@@ -87,7 +87,7 @@
         </div>
         <div class="portfolio-info">
         <h2>Power Slam Wrestling</h2>
-        <p>Gnarwhal Studios (creators of Humans vs. Zombies and Slap45) that I worked on with Christopher J Chester. Together we designed and illustrated the identity, cards, and board. The visuals were heavily influenced by prime 80's wrestling androgyny and glam. Watch a beta test of the gameplay here.
+        <p>Gnarwhal Studios (creators of Humans vs. Zombies and Slap45) that I worked on with Christopher J Chester. Together we designed and illustrated the identity, cards, and board. The visuals were heavily influenced by prime 80's wrestling androgyny and glam.
         </p>
       </div>
       <div class="scrl-ind"></div>
