--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta lang="en-US">
+    <title>Han Castanedo</title>
     <link href="css/main.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/loading.js"></script>
@@ -34,6 +35,7 @@
             <h2>Push, Often.</h2>
             <p>Below are select samples of recent works. Each one was made with the intent of pushing creative boundaries and improving the quality of each subsequent project.
             </p>
+            <h6 class="mobile-disc">For more interactive features, please view this website on desktop devices.</h6>
           </div>
           <div class="scrl-ind"></div>
         </section>
@@ -59,13 +61,52 @@
     </section>
     <section class="portfolio-container box_3">
         <div class="portfolio-title">
-          <div class="item scratchmade"></div>
-          <div class="number">3/8</div>
+          <div class="item foodshed"></div>
+          <div class="number"3/8</div>
         </div>
         <div class="img-container">
-          <img class="img one" src="assets/scratchmade/scratchmade-2raisin-lighttaupe.png">
-          <img class="img two" src="assets/scratchmade/scratchmade-flyer.png">
-          <img class="img three" src="assets/scratchmade/scratchmade-5x7-postcard.png">
+          <img class="img one" src="assets/foodshed/AC-union-graze-2016-02_1340_c.jpg">
+          <img class="img two" src="assets/foodshed/P-L-hoppin-john-kit-01_1340_c.jpg">
+          <img class="img three" src="assets/foodshed/cj-bandposter-sketch.jpg">
+          <img class="img four" src="assets/foodshed/mixedgrill.png">
+          <img class="img five" src="assets/foodshed/stuffing_starter_kit.png">
+        </div>
+        <div class="portfolio-info">
+          <h2>Foodshed</h2>
+          <p>Foodshed (founded by chef Spike Gjerde) is a Baltimore based restaurant group, consisting of: Artifact Coffee, Woodberry Kitchen, Parts & Labor, Grand Cru, and Bird in Hand. I worked in-house and directly with chefs and managers to design all material for events, menus, social presence, and retail packing within individual restaurant brand guidelines.
+      </div>
+      <div class="scrl-ind"></div>
+    </section>
+    <section class="portfolio-container box_4">
+        <div class="portfolio-title">
+          <div class="item pilon"></div>
+          <div class="number">4/8</div>
+        </div>
+        <div class="vid-container">
+          <div class="vid-container-2">
+            <img class="screen-top" src="assets/screentop.svg">
+            <video autoplay muted loop>
+              <source src="assets/pilon/pilon-test-4.mp4" type="video/mp4" />
+            </video>
+          </div>
+        </div>
+      <div class="portfolio-info">
+        <h2>Pilon</h2>
+        <p>As a headless API-first e-commerce product, it was important that Pilon’s website appealed to advanced developers in the field. With this in mind, the design needed to be based around interactive visual elements, like the animated gradient background, to emphasize lightweight technology that’s easy to use.
+        </p>
+      </div>
+      <div class="scrl-ind"></div>
+    </section>
+    <section class="portfolio-container box_5">
+        <div class="portfolio-title">
+          <div class="item scratchmade"></div>
+          <div class="number">5/8</div>
+        </div>
+        <div class="img-container">
+          <img class="img one" src="assets/scratchmade/scratchmade-flyer.png">
+          <img class="img two" src="assets/scratchmade/scratchmade-5x7-postcard.png">
+          <img class="img three" src="assets/scratchmade/scratchmade-5x7-postcard2.png">
+          <img class="img four" src="assets/scratchmade/scratchmade-menu-July23.jpg">
         </div>
       <div class="portfolio-info">
         <h2>ScratchMade</h2>
@@ -74,10 +115,10 @@
       </div>
       <div class="scrl-ind"></div>
     </section>
-    <section class="portfolio-container box_4">
+    <section class="portfolio-container box_6">
         <div class="portfolio-title">
           <div class="item powerslam"></div>
-          <div class="number">4/8</div>
+          <div class="number">6/8</div>
         </div>
         <div class="img-container">
           <img class="img one" src="assets/powerslam/Dark-Back.png">
@@ -92,59 +133,23 @@
       </div>
       <div class="scrl-ind"></div>
     </section>
-    <section class="portfolio-container box_5">
+    <section class="portfolio-container box_7">
         <div class="portfolio-title">
           <div class="item urbanteachers"></div>
-          <div class="number">5/8</div>
+          <div class="number">7/8</div>
         </div>
         <div class="vid-container">
           <div class="vid-container-2">
             <img class="screen-top" src="assets/screentop.svg">
             <video autoplay muted loop>
-  <source src="assets/urbanteachers/UrbanTeachers-HomepageAnimation.mov" type="video/mp4" />
-  </video>
-</div>
+              <source src="assets/urbanteachers/UrbanTeachers-HomepageAnimation.mov" type="video/mp4" />
+            </video>
+          </div>
         </div>
       <div class="portfolio-info">
         <h2>Urban Teachers</h2>
         <p>For this project, I built all of the the front-end development with the goal of maintaining the integrity of the original flats and assets (designed by Christopher)  This website was built from scratch, utilizing relative units instead of solid pixels, with CSS grids to keep the site light and responsive to emphasize the clean design.
         </p>
-      </div>
-      <div class="scrl-ind"></div>
-    </section>
-    <section class="portfolio-container box_6">
-        <div class="portfolio-title">
-          <div class="item pilon"></div>
-          <div class="number">6/8</div>
-        </div>
-        <div class="vid-container">
-          <div class="vid-container-2">
-            <img class="screen-top" src="assets/screentop.svg">
-            <video autoplay muted loop>
-  <source src="assets/pilon/pilon-test-4.mp4" type="video/mp4" />
-  </video>
-</div>
-        </div>
-      <div class="portfolio-info">
-        <h2>Pilon</h2>
-        <p>As a headless API-first e-commerce product, it was important that Pilon’s website appealed to advanced developers in the field. With this in mind, the design needed to be based around interactive visual elements, like the animated gradient background, to emphasize lightweight technology that’s easy to use.
-        </p>
-      </div>
-      <div class="scrl-ind"></div>
-    </section>
-    <section class="portfolio-container box_7">
-        <div class="portfolio-title">
-          <div class="item foodshed"></div>
-          <div class="number">7/8</div>
-        </div>
-        <div class="img-container">
-          <img class="img one" src="assets/foodshed/AC-union-graze-2016-02_1340_c.jpg">
-          <img class="img two" src="assets/foodshed/P-L-hoppin-john-kit-01_1340_c.jpg">
-          <img class="img three" src="assets/foodshed/cj-bandposter-sketch.jpg">
-        </div>
-      <div class="portfolio-info">
-        <h2>Foodshed</h2>
-        <p>Foodshed (founded by chef Spike Gjerde) is a Baltimore based restaurant group, consisting of: Artifact Coffee, Woodberry Kitchen, Parts & Labor, Grand Cru, and Bird in Hand. I worked in-house and directly with chefs and managers to design all material for events, menus, social presence, and retail packing within individual restaurant brand guidelines.
       </div>
       <div class="scrl-ind"></div>
     </section>
@@ -154,10 +159,11 @@
           <div class="number">8/8</div>
         </div>
         <div class="img-container">
-          <img class="img one" src="assets/illustration/drinknosleep.png">
-          <img class="img two" src="assets/illustration/Doobys5YearLotParty-8.5x11.png">
-          <img class="img three" src="assets/illustration/conjunto-bruja-B.png">
-          <img class="img four" src="assets/illustration/cj-bandposter-color-draft2.png">
+          <img class="img one" src="assets/smallprojects/Noonas_Logo_Full.png">
+          <img class="img two" src="assets/smallprojects/noonas_styleguide.png">
+          <img class="img three" src="assets/smallprojects/Doobys5YearLotParty-8.5x11.png">
+          <img class="img four" src="assets/smallprojects/conjunto-bruja-B.png">
+          <img class="img five" src="assets/smallprojects/cj-bandposter-color-draft2.png">
         </div>
       <div class="portfolio-info">
         <h2>Small Projects</h2>
@@ -172,10 +178,10 @@
       <div class="line-2"></div>
       <div class="bio">
         <div class="greeting"></div>
-        <p>I’m a Latinx multidisciplinary designer living and working out of Baltimore, MD. My current obsession has been learning to build with code. I'm originally from Southern California and moved to Baltimore to attend MICA, where I graduated in 2015. I currently work at Kapowza as an Interactive Designer.
+        <p>I’m a Latinx multidisciplinary designer and illustrator currently living and working out of Baltimore, MD. My current obsession has been learning to build with code. I'm originally from Southern California and moved to Baltimore to attend MICA, where I graduated in 2015. I currently work at Kapowza as an Interactive Designer.
 </p>
 <p class="hobbies">
-When I’m not working, I stay busy by reading <a href="#" class="revealImage" data-src="assets/about/calabi-yau.png">physics articles,</a> <a href="#" class="revealImage" data-src="assets/about/wanda_sander.jpg">powerlifting,</a> and <a href="#" class="revealImage" data-src="assets/about/tamales.jpg">cooking Ecuadorian food</a>. My ideal weekend is eating a huge bowl of Pho and watching <a href="#" class="revealImage" data-src="https://media.giphy.com/media/eggkOyfpyWweI/giphy.gif">Curb Your Enthusiasm.</a>
+When I’m not working, I stay busy by reading <a href="#" class="revealImage" data-src="assets/about/calabi-yau.png">physics articles,</a> <a href="#" class="revealImage" data-src="assets/about/wanda_sander.jpg">powerlifting,</a> and <a href="#" class="revealImage" data-src="assets/about/tamales.jpg">cooking Ecuadorian food</a>. My ideal weekend is eating a huge bowl of Phở and watching <a href="#" class="revealImage" data-src="https://media.giphy.com/media/eggkOyfpyWweI/giphy.gif">Curb Your Enthusiasm.</a>
         </p>
         <h6>This site was designed & coded from scratch. No templates - just learning.</h6>
       </div>
