--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
           <div class="portfolio-info">
             <h2>Push, Often.</h2>
-            <p>Below are select samples of recent works. Each one was made with the intent of pushing creative boundaries and improving the quality of each subsequent project.
+            <p>Below are select samples of recent works. Each one was made with the intent of pushing creative boundaries and learning along the way. I'm always pushing code or pixels, often.
             </p>
             <h6 class="mobile-disc">For more interactive features, please view this website on desktop devices.</h6>
           </div>
