fix unclosed tag

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section class="portfolio-container box_3">
         <div class="portfolio-title">
           <div class="item foodshed"></div>
-          <div class="number"3/8</div>
+          <div class="number">3/8</div>
         </div>
         <div class="img-container">
           <img class="img one" src="assets/foodshed/AC-union-graze-2016-02_1340_c.jpg">
