add social links and email to bio

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 <p class="hobbies">
 When I’m not working, I stay busy by reading <a href="#" class="revealImage" data-src="assets/about/calabi-yau.png">physics articles,</a> <a href="#" class="revealImage" data-src="assets/about/wanda_sander.jpg">powerlifting,</a> and <a href="#" class="revealImage" data-src="assets/about/tamales.jpg">cooking Ecuadorian food</a>. My ideal weekend is eating a huge bowl of Phở and watching <a href="#" class="revealImage" data-src="https://media.giphy.com/media/eggkOyfpyWweI/giphy.gif">Curb Your Enthusiasm.</a>
         </p>
+        <p>If you'd like to get in touch, feel free to <a href="mailto:han.castanedo@gmail.com">email</a> me or follow me on <a href="https://www.instagram.com/han.castanedo/">Instagram</a> and <a href="https://github.com/hancas">GitHub</a>.</p>
         <h6>This site was designed & coded from scratch. No templates - just learning.</h6>
       </div>
     </section>
