add links to projects, fix dash in bio

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
       <div class="portfolio-info">
         <h2>Pilon</h2>
-        <p>As a headless API-first e-commerce product, it was important that Pilon’s website appealed to advanced developers in the field. With this in mind, the design needed to be based around interactive visual elements, like the animated gradient background, to emphasize lightweight technology that’s easy to use.
+        <p>As a headless API-first e-commerce product, it was important that Pilon’s website appealed to advanced developers in the field. With this in mind, the design needed to be based around interactive visual elements, like the animated gradient background, to emphasize lightweight technology that’s easy to use. Take a look at <a href="https://pilon.io/">pilon.io</a>
         </p>
       </div>
       <div class="scrl-ind"></div>
@@ -128,7 +128,7 @@
         </div>
         <div class="portfolio-info">
         <h2>Power Slam Wrestling</h2>
-        <p>Gnarwhal Studios (creators of Humans vs. Zombies and Slap45) that I worked on with Christopher J Chester. Together we designed and illustrated the identity, cards, and board. The visuals were heavily influenced by prime 80's wrestling androgyny and glam.
+        <p>A turn-based boardgame currently in beta that <a href="http://gnarwhalstudios.com/">Gnarwhal Studios</a> (creators of Humans vs. Zombies and Slap45) that I worked on with <a href="https://www.instagram.com/christopherjchester/">Christopher J Chester</a>. Together we designed and illustrated the identity, cards, and board. The visuals were heavily influenced by prime 80's wrestling androgyny and glam.
         </p>
       </div>
       <div class="scrl-ind"></div>
@@ -148,7 +148,7 @@
         </div>
       <div class="portfolio-info">
         <h2>Urban Teachers</h2>
-        <p>For this project, I built all of the the front-end development with the goal of maintaining the integrity of the original flats and assets (designed by Christopher)  This website was built from scratch, utilizing relative units instead of solid pixels, with CSS grids to keep the site light and responsive to emphasize the clean design.
+        <p>For this <a href="https://urbanteachers.org/">project</a>, I built all of the the front-end development with the goal of maintaining the integrity of the original flats and assets (designed by Christopher)  This website was built from scratch, utilizing relative units instead of solid pixels, with CSS grids to keep the site light and responsive to emphasize the clean design.
         </p>
       </div>
       <div class="scrl-ind"></div>
@@ -184,7 +184,7 @@
 When I’m not working, I stay busy by reading <a href="#" class="revealImage" data-src="assets/about/calabi-yau.png">physics articles,</a> <a href="#" class="revealImage" data-src="assets/about/wanda_sander.jpg">powerlifting,</a> and <a href="#" class="revealImage" data-src="assets/about/tamales.jpg">cooking Ecuadorian food</a>. My ideal weekend is eating a huge bowl of Phở and watching <a href="#" class="revealImage" data-src="https://media.giphy.com/media/eggkOyfpyWweI/giphy.gif">Curb Your Enthusiasm.</a>
         </p>
         <p>If you'd like to get in touch, feel free to <a href="mailto:han.castanedo@gmail.com">email</a> me or follow me on <a href="https://www.instagram.com/han.castanedo/">Instagram</a> and <a href="https://github.com/hancas">GitHub</a>.</p>
-        <h6>This site was designed & coded from scratch. No templates - just learning.</h6>
+        <h6>This site was designed & coded from scratch. No templates, just learning.</h6>
       </div>
     </section>
   <footer id="ftr">
