optimize image file sizes + add noonas project

--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
         </div>
         <div class="img-container">
           <img class="img one" src="assets/haenyo/haenyo_cafeandamiro_2.png">
-          <img class="img two" src="assets/haenyo/haenyo_square_2.png">
-          <img class="img three" src="assets/haenyo/haenyo_themorethemerrior_2.png">
-          <img class="img four" src="assets/haenyo/haenyo_springindc.png">
-          <img class="img five" src="assets/haenyo/Haenyo-PekoPekoRamen.png">
+          <img class="img two" src="assets/haenyo/Haenyo_Menu_andamiro_2.png">
+          <img class="img three" src="assets/haenyo/Haenyo-KoRYEan.png">
+          <img class="img four" src="assets/haenyo/Haenyo_Menu_rye.png">
+          <img class="img five" src="assets/haenyo/haenyo_themorethemerrior_2.png">
+          <img class="img six" src="assets/haenyo/haenyo_springindc.png">
+          <img class="img seven" src="assets/haenyo/Haenyo-PekoPekoRamen.png">
         </div>
       <div class="portfolio-info">
         <h2>haenyo</h2>
@@ -61,26 +63,8 @@
     </section>
     <section class="portfolio-container box_3">
         <div class="portfolio-title">
-          <div class="item foodshed"></div>
-          <div class="number">3/8</div>
-        </div>
-        <div class="img-container">
-          <img class="img one" src="assets/foodshed/AC-union-graze-2016-02_1340_c.jpg">
-          <img class="img two" src="assets/foodshed/P-L-hoppin-john-kit-01_1340_c.jpg">
-          <img class="img three" src="assets/foodshed/cj-bandposter-sketch.jpg">
-          <img class="img four" src="assets/foodshed/mixedgrill.png">
-          <img class="img five" src="assets/foodshed/stuffing_starter_kit.png">
-        </div>
-        <div class="portfolio-info">
-          <h2>Foodshed</h2>
-          <p>Foodshed (founded by chef Spike Gjerde) is a Baltimore based restaurant group, consisting of: Artifact Coffee, Woodberry Kitchen, Parts & Labor, Grand Cru, and Bird in Hand. I worked in-house and directly with chefs and managers to design all material for events, menus, social presence, and retail packing within individual restaurant brand guidelines.
-      </div>
-      <div class="scrl-ind"></div>
-    </section>
-    <section class="portfolio-container box_4">
-        <div class="portfolio-title">
           <div class="item pilon"></div>
-          <div class="number">4/8</div>
+          <div class="number">3/8</div>
         </div>
         <div class="vid-container">
           <div class="vid-container-2">
@@ -92,21 +76,20 @@
         </div>
       <div class="portfolio-info">
         <h2>Pilon</h2>
-        <p>As a headless API-first e-commerce product, it was important that Pilon’s website appealed to advanced developers in the field. With this in mind, the design needed to be based around interactive visual elements, like the animated gradient background, to emphasize lightweight technology that’s easy to use. Take a look at <a href="https://pilon.io/">pilon.io</a>
+        <p>As a headless API-first e-commerce product, it was important that Pilon’s microsite appealed to advanced developers in the field. With this in mind, the design needed to be based around interactive visual elements, like the animated gradient background, to emphasize lightweight technology that’s easy to use. Take a look at <a href="https://pilon.io/">pilon.io</a>
         </p>
       </div>
       <div class="scrl-ind"></div>
     </section>
-    <section class="portfolio-container box_5">
+    <section class="portfolio-container box_4">
         <div class="portfolio-title">
           <div class="item scratchmade"></div>
-          <div class="number">5/8</div>
+          <div class="number">4/8</div>
         </div>
         <div class="img-container">
           <img class="img one" src="assets/scratchmade/scratchmade-flyer.png">
           <img class="img two" src="assets/scratchmade/scratchmade-5x7-postcard.png">
-          <img class="img three" src="assets/scratchmade/scratchmade-5x7-postcard2.png">
-          <img class="img four" src="assets/scratchmade/scratchmade-menu-July23.jpg">
+          <img class="img three" src="assets/scratchmade/scratchmade-menu-July23.jpg">
         </div>
       <div class="portfolio-info">
         <h2>ScratchMade</h2>
@@ -115,28 +98,26 @@
       </div>
       <div class="scrl-ind"></div>
     </section>
-    <section class="portfolio-container box_6">
+    <section class="portfolio-container box_5">
         <div class="portfolio-title">
-          <div class="item powerslam"></div>
-          <div class="number">6/8</div>
+          <div class="item noonas"></div>
+          <div class="number">5/8</div>
         </div>
         <div class="img-container">
-          <img class="img one" src="assets/powerslam/Dark-Back.png">
-          <img class="img two" src="assets/powerslam/Chop-M.png">
-          <img class="img three" src="assets/powerslam/BodySlam-Y.png">
-          <img class="img four" src="assets/powerslam/Kick-C.png">
+          <img class="img one" src="assets/noonas/Noonas_Logo_Full.png">
+          <img class="img two" src="assets/noonas/noonas_styleguide.png">
+          <img class="img three" src="assets/noonas/noonas_signagemockup.png">
         </div>
         <div class="portfolio-info">
-        <h2>Power Slam Wrestling</h2>
-        <p>A turn-based boardgame currently in beta that <a href="http://gnarwhalstudios.com/">Gnarwhal Studios</a> (creators of Humans vs. Zombies and Slap45) that I worked on with <a href="https://www.instagram.com/christopherjchester/">Christopher J Chester</a>. Together we designed and illustrated the identity, cards, and board. The visuals were heavily influenced by prime 80's wrestling androgyny and glam.
-        </p>
+        <h2>Noona's</h2>
+        <p>Noona is the Korean word for “older sister” and a references a special relationship between siblings and food. The illustration and handwritten script typography evoke fun and light-hearted childhood memories of pizza. Full designed menu and opening poster coming soon. <em>Grand opening winter 2018.</em>
       </div>
       <div class="scrl-ind"></div>
     </section>
-    <section class="portfolio-container box_7">
+    <section class="portfolio-container box_6">
         <div class="portfolio-title">
           <div class="item urbanteachers"></div>
-          <div class="number">7/8</div>
+          <div class="number">6/8</div>
         </div>
         <div class="vid-container">
           <div class="vid-container-2">
@@ -153,21 +134,38 @@
       </div>
       <div class="scrl-ind"></div>
     </section>
+    <section class="portfolio-container box_7">
+        <div class="portfolio-title">
+          <div class="item foodshed"></div>
+          <div class="number">7/8</div>
+        </div>
+        <div class="img-container">
+          <img class="img one" src="assets/foodshed/stuffing_starter_kit.png">
+          <img class="img two" src="assets/foodshed/P-L-hoppin-john-kit-01_1340_c.jpg">
+          <img class="img three" src="assets/foodshed/cj-bandposter-sketch.jpg">
+          <img class="img four" src="assets/foodshed/AC-union-graze-2016-02_1340_c.jpg">
+        </div>
+        <div class="portfolio-info">
+          <h2>Foodshed</h2>
+          <p>Foodshed (founded by chef Spike Gjerde) is a Baltimore based restaurant group, consisting of: Artifact Coffee, Woodberry Kitchen, Parts & Labor, Grand Cru, and Bird in Hand. I worked in-house and directly with chefs and managers to design all material for events, menus, social presence, and retail packing within individual restaurant brand guidelines.
+      </div>
+      <div class="scrl-ind"></div>
+    </section>
     <section class="portfolio-container box_8">
         <div class="portfolio-title">
           <div class="item onion"></div>
           <div class="number">8/8</div>
         </div>
         <div class="img-container">
-          <img class="img one" src="assets/smallprojects/Noonas_Logo_Full.png">
-          <img class="img two" src="assets/smallprojects/noonas_styleguide.png">
+          <img class="img one" src="assets/smallprojects/no-human-being-is-illegal.png">
+          <img class="img two" src="assets/smallprojects/talldrink.png">
           <img class="img three" src="assets/smallprojects/Doobys5YearLotParty-8.5x11.png">
           <img class="img four" src="assets/smallprojects/conjunto-bruja-B.png">
-          <img class="img five" src="assets/smallprojects/cj-bandposter-color-draft2.png">
+          <img class="img five" src="assets/smallprojects/BodySlam-Y.png">
         </div>
       <div class="portfolio-info">
         <h2>Small Projects</h2>
-        <p>Smaller freelance projects have often been the start of relationships that turn into the most fulfilling projects I’ve had the pleasure of working on.
+        <p>Smaller freelance illustration and design projects have often been the start of relationships that turn into the most fulfilling projects I’ve had the pleasure of working on.
       </div>
     </section>
     <section id="about">
