add https links

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         </div>
         </div>
         <div class="img-container">
-          <img class="img one" src="assets/haenyo/haenyo_cafeandamiro_2.png">
-          <img class="img two" src="assets/haenyo/Haenyo_Menu_andamiro_2.png">
-          <img class="img three" src="assets/haenyo/Haenyo-KoRYEan.png">
-          <img class="img four" src="assets/haenyo/Haenyo_Menu_rye.png">
-          <img class="img five" src="assets/haenyo/haenyo_themorethemerrior_2.png">
-          <img class="img six" src="assets/haenyo/haenyo_springindc.png">
-          <img class="img seven" src="assets/haenyo/Haenyo-PekoPekoRamen.png">
+          <img class="img one" src="https://hancastanedo.com/assets/haenyo/haenyo_cafeandamiro_2.png">
+          <img class="img two" src="https://hancastanedo.com/assets/haenyo/Haenyo_Menu_andamiro_2.png">
+          <img class="img three" src="https://hancastanedo.com/assets/haenyo/Haenyo-KoRYEan.png">
+          <img class="img four" src="https://hancastanedo.com/assets/haenyo/Haenyo_Menu_rye.png">
+          <img class="img five" src="https://hancastanedo.com/assets/haenyo/haenyo_themorethemerrior_2.png">
+          <img class="img six" src="https://hancastanedo.com/assets/haenyo/haenyo_springindc.png">
+          <img class="img seven" src="https://hancastanedo.com/assets/haenyo/Haenyo-PekoPekoRamen.png">
         </div>
       <div class="portfolio-info">
         <h2>haenyo</h2>
@@ -70,7 +70,7 @@
           <div class="vid-container-2">
             <img class="screen-top" src="assets/screentop.svg">
             <video autoplay muted loop>
-              <source src="assets/pilon/pilon-test-4.mp4" type="video/mp4" />
+              <source src="https://hancastanedo.com/assets/pilon/pilon-test-4.mp4" type="video/mp4" />
             </video>
           </div>
         </div>
@@ -87,9 +87,9 @@
           <div class="number">4/8</div>
         </div>
         <div class="img-container">
-          <img class="img one" src="assets/scratchmade/scratchmade-flyer.png">
-          <img class="img two" src="assets/scratchmade/scratchmade-5x7-postcard.png">
-          <img class="img three" src="assets/scratchmade/scratchmade-menu-July23.jpg">
+          <img class="img one" src="https://hancastanedo.com/assets/scratchmade/scratchmade-flyer.png">
+          <img class="img two" src="https://hancastanedo.com/assets/scratchmade/scratchmade-5x7-postcard.png">
+          <img class="img three" src="https://hancastanedo.com/assets/scratchmade/scratchmade-menu-July23.jpg">
         </div>
       <div class="portfolio-info">
         <h2>ScratchMade</h2>
@@ -104,9 +104,9 @@
           <div class="number">5/8</div>
         </div>
         <div class="img-container">
-          <img class="img one" src="assets/noonas/Noonas_Logo_Full.png">
-          <img class="img two" src="assets/noonas/noonas_styleguide.png">
-          <img class="img three" src="assets/noonas/noonas_signagemockup.png">
+          <img class="img one" src="https://hancastanedo.com/assets/noonas/Noonas_Logo_Full.png">
+          <img class="img two" src="https://hancastanedo.com/assets/noonas/noonas_styleguide.png">
+          <img class="img three" src="https://hancastanedo.com/assets/noonas/noonas_signagemockup.png">
         </div>
         <div class="portfolio-info">
         <h2>Noona's</h2>
@@ -123,7 +123,7 @@
           <div class="vid-container-2">
             <img class="screen-top" src="assets/screentop.svg">
             <video autoplay muted loop>
-              <source src="assets/urbanteachers/UrbanTeachers-HomepageAnimation.mov" type="video/mp4" />
+              <source src="https://hancastanedo.com/assets/urbanteachers/UrbanTeachers-HomepageAnimation.mov" type="video/mp4" />
             </video>
           </div>
         </div>
@@ -140,10 +140,10 @@
           <div class="number">7/8</div>
         </div>
         <div class="img-container">
-          <img class="img one" src="assets/foodshed/stuffing_starter_kit.png">
-          <img class="img two" src="assets/foodshed/P-L-hoppin-john-kit-01_1340_c.jpg">
-          <img class="img three" src="assets/foodshed/cj-bandposter-sketch.jpg">
-          <img class="img four" src="assets/foodshed/AC-union-graze-2016-02_1340_c.jpg">
+          <img class="img one" src="https://hancastanedo.com/assets/foodshed/stuffing_starter_kit.png">
+          <img class="img two" src="https://hancastanedo.com/assets/foodshed/P-L-hoppin-john-kit-01_1340_c.jpg">
+          <img class="img three" src="https://hancastanedo.com/assets/foodshed/cj-bandposter-sketch.jpg">
+          <img class="img four" src="https://hancastanedo.com/assets/foodshed/AC-union-graze-2016-02_1340_c.jpg">
         </div>
         <div class="portfolio-info">
           <h2>Foodshed</h2>
@@ -157,11 +157,11 @@
           <div class="number">8/8</div>
         </div>
         <div class="img-container">
-          <img class="img one" src="assets/smallprojects/no-human-being-is-illegal.png">
-          <img class="img two" src="assets/smallprojects/talldrink.png">
-          <img class="img three" src="assets/smallprojects/Doobys5YearLotParty-8.5x11.png">
-          <img class="img four" src="assets/smallprojects/conjunto-bruja-B.png">
-          <img class="img five" src="assets/smallprojects/BodySlam-Y.png">
+          <img class="img one" src="https://hancastanedo.com/assets/smallprojects/no-human-being-is-illegal.png">
+          <img class="img two" src="https://hancastanedo.com/assets/smallprojects/talldrink.png">
+          <img class="img three" src="https://hancastanedo.com/assets/smallprojects/Doobys5YearLotParty-8.5x11.png">
+          <img class="img four" src="https://hancastanedo.com/assets/smallprojects/conjunto-bruja-B.png">
+          <img class="img five" src="https://hancastanedo.com/assets/smallprojects/BodySlam-Y.png">
         </div>
       <div class="portfolio-info">
         <h2>Small Projects</h2>
@@ -171,7 +171,7 @@
     <section id="about">
       <div class="profile">
         <div class="circle"></div>
-        <img class="img profile-img" src="assets/selfportrait-2018.svg">
+        <img class="img profile-img" src="https://hancastanedo.com/assets/selfportrait-2018.svg">
       </div>
       <div class="line-2"></div>
       <div class="bio">
@@ -179,7 +179,7 @@
         <p>I’m a Latinx multidisciplinary designer and illustrator currently living and working out of Baltimore, MD. My current obsession has been learning to build with code. I'm originally from Southern California and moved to Baltimore to attend MICA, where I graduated in 2015. I currently work at Kapowza as an Interactive Designer.
 </p>
 <p class="hobbies">
-When I’m not working, I stay busy by reading <a href="#" class="revealImage" data-src="assets/about/calabi-yau.png">physics articles,</a> <a href="#" class="revealImage" data-src="assets/about/wanda_sander.jpg">powerlifting,</a> and <a href="#" class="revealImage" data-src="assets/about/tamales.jpg">cooking Ecuadorian food</a>. My ideal weekend is eating a huge bowl of Phở and watching <a href="#" class="revealImage" data-src="https://media.giphy.com/media/eggkOyfpyWweI/giphy.gif">Curb Your Enthusiasm.</a>
+When I’m not working, I stay busy by reading <a href="#" class="revealImage" data-src="https://hancastanedo.com/assets/about/calabi-yau.png">physics articles,</a> <a href="#" class="revealImage" data-src="https://hancastanedo.com/assets/about/wanda_sander.jpg">powerlifting,</a> and <a href="#" class="revealImage" data-src="https://hancastanedo.com/assets/about/tamales.jpg">cooking Ecuadorian food</a>. My ideal weekend is eating a huge bowl of Phở and watching <a href="#" class="revealImage" data-src="https://media.giphy.com/media/eggkOyfpyWweI/giphy.gif">Curb Your Enthusiasm.</a>
         </p>
         <p>If you'd like to get in touch, feel free to <a href="mailto:han.castanedo@gmail.com">email</a> me or follow me on <a href="https://www.instagram.com/han.castanedo/">Instagram</a> and <a href="https://github.com/hancas">GitHub</a>.</p>
         <h6>This site was designed & coded from scratch. No templates, just learning.</h6>
